Changelog
=========

6.4-dev0 - (unreleased)
---------------------
* Change: updated URLs pointing to eea.europa.eu with https://
  [alecghica refs #95849]

6.3 - (2018-05-24)
-----------------------
* Change: replaced the old invalidate cache method footer.
  [alecghica refs #95020]

6.2 - (2017-12-12)
------------------
* Change: Replace eeacms/zptlint with eeacms/plone-test:4 zptlint
  [avoinea refs #90415]
* Change: eea_header.pt merged from /custom
  [alecghica refs #89967]

6.1 - (2017-11-07)
------------------
* Feature: added cssonly option to getRequiredHead?cssonly=true
  which if passed will only output the css for the eea header since we should
  have the ability to output css in a different position from the js
  [ichim-david refs #88482]
* Feature: added jsonly option to getRequiredHead?jsonly=true
  which if passed will only output the js for the eea header since we should
  have the ability to output js in a different position from the css
  [ichim-david refs #88482]
* Feature: added js_libs list property to template_service portal_properties which
  if added will override the js resources that will be concatenated when calling
  external_templates_scripts.js browserView
  [ichim-david refs #88482]

6.0 - (2017-05-22)
------------------
* Change: fixed PyLint warnings and errors
  [eduard-fironda refs #84949]

5.9 - (2017-04-24)
------------------
* Change: updated package information
  [eduard-fironda]

5.8 - (2017-03-27)
------------------
* Bugfix: Add the EEA Google Analytics as a required js so that it is on all elastic apps.
  Moved required js in getRequiredHead where it should be.
  [demarant refs #83417]

5.7 - (2017-02-14)
------------------
* Change: added render_full_html parameter to getFooter and getHeader
  which if passed with False will render only the template markup
  instead of containing the html, head and body tag
  [ichim-david refs #82166]

5.6 - (2017-01-30)
------------------