@@ -22,13 +22,7 @@ def manage_saveStylesheets(self, REQUEST=None):
     """ Save stylesheets from the ZMI.
         Updates the whole sequence. For editing and reordering.
     """
-    # 1. first, a temporary patch for #17259
-    if REQUEST and not REQUEST.form:
-        REQUEST.RESPONSE.redirect("manage_workspace")
-        return
-    # 2. original call:
     self._old_manage_saveStylesheets(REQUEST)
-    # 3. and now our permanent patch:
     invalidateClientsCache(self, REQUEST)
 
 security.declareProtected(permissions.ManagePortal, 'manage_saveScripts')
@@ -36,11 +30,5 @@ def manage_saveScripts(self, REQUEST=None):
     """ Save scripts from the ZMI.
         Updates the whole sequence. For editing and reordering.
     """
-    # 1. first, a temporary patch for #17259
-    if REQUEST and not REQUEST.form:
-        REQUEST.RESPONSE.redirect("manage_workspace")
-        return
-    # 2. original call:
     self._old_manage_saveScripts(REQUEST)
-    # 3. and now our permanent patch:
     invalidateClientsCache(self, REQUEST)
